// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`progress > renders with animation carousel correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-slot="base" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" data-slot="indicator" class=""></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`progress > renders with animation carousel-inverse correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-slot="base" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" data-slot="indicator" class=""></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`progress > renders with animation elastic correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-slot="base" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" data-slot="indicator" class=""></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`progress > renders with animation swing correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-slot="base" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" data-slot="indicator" class=""></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`progress > renders with as correctly 1`] = `
"<section data-orientation="horizontal" data-slot="root" class="">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-slot="base" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" data-slot="indicator" class=""></div>
  </div>
  <!--v-if-->
</section>"
`;

exports[`progress > renders with class correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="w-48">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-slot="base" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" data-slot="indicator" class=""></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`progress > renders with color neutral correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="50" aria-label="50%" role="progressbar" data-state="loading" data-value="50" data-max="100" data-slot="base" style="transform: translateZ(0);">
    <div data-state="loading" data-value="50" data-max="100" data-slot="indicator" class="" style="transform: translateX(-50%);"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`progress > renders with max correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <div data-slot="status" class="" style="width: 50%;">50% </div>
  <div aria-valuemax="4" aria-valuemin="0" aria-valuenow="2" aria-label="50%" role="progressbar" data-state="loading" data-value="2" data-max="4" data-slot="base" style="transform: translateZ(0);">
    <div data-state="loading" data-value="2" data-max="4" data-slot="indicator" class="" style="transform: translateX(-50%);"></div>
  </div>
  <div data-slot="steps" class="">
    <div data-slot="step" class="">Waiting...</div>
    <div data-slot="step" class="">Cloning...</div>
    <div data-slot="step" class="">Migrating...</div>
    <div data-slot="step" class="">Deploying...</div>
    <div data-slot="step" class="">Done!</div>
  </div>
</div>"
`;

exports[`progress > renders with max inverted correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <div data-slot="status" class="" style="width: 50%;">50% </div>
  <div aria-valuemax="4" aria-valuemin="0" aria-valuenow="2" aria-label="50%" role="progressbar" data-state="loading" data-value="2" data-max="4" data-slot="base" style="transform: translateZ(0);">
    <div data-state="loading" data-value="2" data-max="4" data-slot="indicator" class="" style="transform: translateX(50%);"></div>
  </div>
  <div data-slot="steps" class="">
    <div data-slot="step" class="">Waiting...</div>
    <div data-slot="step" class="">Cloning...</div>
    <div data-slot="step" class="">Migrating...</div>
    <div data-slot="step" class="">Deploying...</div>
    <div data-slot="step" class="">Done!</div>
  </div>
</div>"
`;

exports[`progress > renders with modelValue correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="50" aria-label="50%" role="progressbar" data-state="loading" data-value="50" data-max="100" data-slot="base" style="transform: translateZ(0);">
    <div data-state="loading" data-value="50" data-max="100" data-slot="indicator" class="" style="transform: translateX(-50%);"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`progress > renders with orientation horizontal correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-slot="base" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" data-slot="indicator" class=""></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`progress > renders with orientation vertical correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-slot="base" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" data-slot="indicator" class=""></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`progress > renders with size 2xl correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-slot="base" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" data-slot="indicator" class=""></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`progress > renders with size 2xs correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-slot="base" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" data-slot="indicator" class=""></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`progress > renders with size lg correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-slot="base" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" data-slot="indicator" class=""></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`progress > renders with size md correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-slot="base" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" data-slot="indicator" class=""></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`progress > renders with size sm correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-slot="base" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" data-slot="indicator" class=""></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`progress > renders with size xl correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-slot="base" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" data-slot="indicator" class=""></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`progress > renders with size xs correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-slot="base" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" data-slot="indicator" class=""></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`progress > renders with status correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <div data-slot="status" class="" style="width: 50%;">50% </div>
  <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="50" aria-label="50%" role="progressbar" data-state="loading" data-value="50" data-max="100" data-slot="base" style="transform: translateZ(0);">
    <div data-state="loading" data-value="50" data-max="100" data-slot="indicator" class="" style="transform: translateX(-50%);"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`progress > renders with status inverted correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <div data-slot="status" class="" style="width: 50%;">50% </div>
  <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="50" aria-label="50%" role="progressbar" data-state="loading" data-value="50" data-max="100" data-slot="base" style="transform: translateZ(0);">
    <div data-state="loading" data-value="50" data-max="100" data-slot="indicator" class="" style="transform: translateX(50%);"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`progress > renders with status slot correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-slot="base" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" data-slot="indicator" class=""></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`progress > renders with ui correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-slot="base" class="bg-default" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" data-slot="indicator" class=""></div>
  </div>
  <!--v-if-->
</div>"
`;
